integrador_2/My Car/mycar/src/main/java/com/example/mycar/error/FacturaYaAprobadaException.java
package com.example.mycar.error;

public class FacturaYaAprobadaException extends RuntimeException {
    public FacturaYaAprobadaException(Long facturaId) {
        super("La factura " + facturaId + " ya está aprobada");
    }
}

